# sudoku

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  sudoku.cpp  sudoku.h  sudoku.ui  ui_sudoku.h
include/: board.hpp  boardCreatorDynamic.hpp  boardCreatorStatic.hpp  boardDynamicArray.hpp  boardSolver.hpp  boardStaticArray.hpp
lib/: CMakeLists.txt
lib/include/: sudoku.h  ui_sudoku.h
lib/src/: moc_sudoku.cpp  sudoku.cpp  sudoku.qrc  sudoku.ui
src/: CMakeLists.txt  board.cpp  boardSolver.cpp
